Better/consistent feedback in case of crash during run (stops at last instruction executed), simpler code.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
       .editor li.stopped {
         background-color: lightgray;
       }
+      .editor li.crashed {
+        background-color: indianred;
+      }
     </style>
   </head>
 
