Fix rendering of disabled buttons.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
       .editor li.crashed {
         background-color: indianred;
       }
+
+      .lustre-ui-button:disabled {
+        color: var(--greyscale-text-low-contrast);
+      }
+      .lustre-ui-button:disabled:hover {
+        background-color: var(--element-background);
+      }
     </style>
   </head>
 
