--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
       .lustre-ui-button:disabled:hover {
         background-color: var(--element-background);
       }
+      .lustre-ui-button:disabled:hover:active {
+        background-color: var(--element-background);
+        border: 1px solid var(--element-background);
+      }
+      h1 {
+        font-size: x-large;
+        font-weight: bold;
+      }
+      h3 {
+        margin-top: 1em;
+        margin-bottom: 0;
+        font-weight: bold;
+      }
+      .program-state {
+        margin: 0.5em;
+      }
     </style>
   </head>
 
