Complete app rename.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="./build/dev/javascript/lustre_ui/priv/static/lustre-ui.css"
     />
-    <script type="module" src="/priv/static/app.mjs"></script>
+    <script type="module" src="/priv/static/know_how_computer.mjs"></script>
 
     <style>
       ol.editor {
