Link to the docs, improve styling.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       h1 {
         font-size: x-large;
         font-weight: bold;
+        margin-bottom: 0.5em;
       }
       h3 {
         margin-top: 1em;
